<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/homepage"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/settings"/>
        <!--
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/"
            android:title="Share"/>-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_outline_24"
            android:title="@string/about_us"/>

    </group>


    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/baseline_help_center_24"
                android:title="@string/help"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>




</menu>