<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.Login">


    <TextView
        android:id="@+id/etiquetaBienvenida"

        style="@style/Widget.Tastypoll.TextView.Title"
        android:layout_marginTop="96dp"
        android:text="@string/welcome"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonResgister"
        style="@style/Widget.Tastypoll.Button.Default"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toEndOf="@+id/botonLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/botonLogin"

        style="@style/Widget.Tastypoll.Button.Default"
        android:layout_marginStart="72dp"

        android:layout_marginTop="60dp"
        android:text="@string/login_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/Widget.Tastypoll.TextInput.Default"

        android:layout_marginTop="44dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etiquetaBienvenida" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/Widget.Tastypoll.TextInput.Default"

        android:layout_marginTop="46dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/botonRecoverPassword"

        style="@style/Widget.Tastypoll.Button.Default"

        android:layout_marginTop="172dp"
        android:text="@string/recover_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>