<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/botonAtras"
            style="@style/Widget.Tastypoll.Button.Atras"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Widget.Tastypoll.TextView.Information"
            android:layout_marginTop="140dp"
            android:text="Modo de acceso enceusta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Widget.Tastypoll.TextView.Information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Tiempo de vida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.228"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTipoAcceso" />

        <TextView
            android:id="@+id/textView5"
            style="@style/Widget.Tastypoll.TextView.Information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="Modo seguro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.228"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTipoAcceso" />

        <CheckBox
            android:id="@+id/checkBoxSeguro"
            style="@style/Widget.Tastypoll.Checkbox.Default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/inputTiempoVida" />

        <RadioGroup
            android:id="@+id/radioGroupTipoAcceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.339"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/radioButtonPublico"
                style="@style/Widget.Tastypoll.RadioButton.Default"
                android:text="@string/public_mode" />

            <RadioButton
                android:id="@+id/radioButtonPrivado"
                style="@style/Widget.Tastypoll.RadioButton.Default"

                android:text="@string/private_mode" />

        </RadioGroup>

        <EditText
            android:id="@+id/inputTiempoVida"
            style="@style/Widget.Tastypoll.TextInput.Default"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:hint="@string/life_time_survey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Spinner
            android:id="@+id/spinnerDieta"
            android:layout_width="248dp"
            android:layout_height="46dp"

            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <Spinner
            android:id="@+id/spinnerCategoriaPlato"
            android:layout_width="248dp"
            android:layout_height="46dp"

            />

        <Button
            android:id="@+id/botonCrear"
            style="@style/Widget.Tastypoll.Button.Default"

            android:layout_marginBottom="16dp"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>